--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ features = ["v3_16"]
 [dependencies.gio]
 version = ""
 features = ["v2_44"]
+
+[dependencies.sourceview]
+version = "0.9.0"
+features = ["v3_24"]
